--- a/Core/Theme/Resources.dark.xaml
+++ b/Core/Theme/Resources.dark.xaml
@@ -266,4 +266,30 @@
     </Style>
 
 
+    <Style TargetType="RadioButton" >
+    <Setter Property="Template">
+        <Setter.Value>
+                <ControlTemplate TargetType="RadioButton">
+                <BulletDecorator Background="Transparent" Cursor="Hand">
+                    <BulletDecorator.Bullet>
+                            <Grid Height="16" Width="16" Background="Transparent">
+                                <Border Name="RadioOuter" Background="Transparent" BorderBrush="#7289da" BorderThickness="2" CornerRadius="50" />
+                                <Border CornerRadius="50" Margin="4" Name="RadioMark" Background="White" Visibility="Hidden" />
+                            </Grid>
+                        </BulletDecorator.Bullet>
+                    <TextBlock Margin="3,1,0,0" Foreground="#FF3E3E3E" FontFamily="Calibri" FontSize="12">
+                        <ContentPresenter />
+                    </TextBlock>
+                </BulletDecorator>
+                <ControlTemplate.Triggers>
+                    <Trigger Property="IsChecked" Value="true">
+                        <Setter TargetName="RadioMark" Property="Visibility" Value="Visible"/>
+                            <Setter TargetName="RadioOuter" Property="BorderBrush" Value="#7289da" />
+                    </Trigger>
+                </ControlTemplate.Triggers>
+            </ControlTemplate>
+        </Setter.Value>
+    </Setter>
+    </Style>
+
 </ResourceDictionary>
