--- a/Core/Theme/Resources.white.xaml
+++ b/Core/Theme/Resources.white.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--MenuItemButton-->
     <Style TargetType="Button" x:Key="MenuItemButton">
-        <Setter Property="Background" Value="#2c2f33"/>
+        <Setter Property="Background" Value="#E1E1E1"/>
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
@@ -22,10 +22,10 @@
 
             </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#7289DA"/>
+                <Setter Property="Background" Value="#CBCBCB"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="#141414"/>
+                <Setter Property="Background" Value="#5A5A5A"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -55,28 +55,28 @@
     
     <!--Label-->
     <Style TargetType="Label">
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="Black"/>
     </Style>
     
     <Style TargetType="TextBlock">
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="Black"/>
     </Style>
 
     <Style TargetType="TextBox">
-        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0 0 0 2"/>
     </Style>
 
     <!--Grid-->
     <Style TargetType="Grid">
-        <Setter Property="Background" Value="#1e2124"/>
+        <Setter Property="Background" Value="#ffffff"/>
     </Style>
     <!--ListBoxItem-->
     <Style TargetType="ListBoxItem">
         <Setter Property="BorderThickness" Value="3"/>
-        <Setter Property="BorderBrush" Value="#424549"/>
-        <Setter Property="Background" Value="#36393e"/>
+        <Setter Property="BorderBrush" Value="#23272a"/>
+        <Setter Property="Background" Value="#E1E1E1"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -98,11 +98,11 @@
                     <ControlTemplate.Triggers>
                         <!--MainColor-->
                         <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="Background" Value="#36393e"/>
+                            <Setter Property="Background" Value="#F3F3F3"/>
                             <Setter Property="BorderBrush" Value="#7289da"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#424549"/>
+                            <Setter Property="Background" Value="#FFFFFF"/>
                             <Setter Property="BorderBrush" Value="#7289da"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
@@ -129,14 +129,14 @@
                    
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsSelected" Value="True">
-                            <Setter TargetName="BorderPanel" Property="Background" Value="#282b30" />
+                            <Setter TargetName="BorderPanel" Property="Background" Value="#878787" />
                             <Setter TargetName="BorderPanel" Property="BorderBrush" Value="#7289da" />
                         </Trigger>
                         <Trigger Property="IsSelected" Value="False">
-                            <Setter TargetName="BorderPanel" Property="Background" Value="#36393e" />
+                            <Setter TargetName="BorderPanel" Property="Background" Value="#CBCBCB" />
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="BorderPanel" Property="Background" Value="	#424549" />
+                            <Setter TargetName="BorderPanel" Property="Background" Value="	#E1E1E1" />
                             <Setter TargetName="BorderPanel" Property="BorderBrush" Value="#7289da" />
                         </Trigger>
                     </ControlTemplate.Triggers>
@@ -146,7 +146,7 @@
     </Style>
     <!--Button-->
     <Style TargetType="Button">
-        <Setter Property="Background" Value="#424549"/>
+        <Setter Property="Background" Value="#FFFFFF"/>
 
         <Setter Property="Template">
             <Setter.Value>
@@ -159,10 +159,10 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#7289DA"/>
+                <Setter Property="Background" Value="#E1E1E1"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="#36393e"/>
+                <Setter Property="Background" Value="#5A5A5A"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -170,7 +170,7 @@
     <Style TargetType="Border" x:Key="MainBorderTheme">
         <Setter Property="BorderThickness" Value="4"/>
         <Setter Property="CornerRadius" Value="15"/>
-        <Setter Property="Background" Value="#424549"/>
+        <Setter Property="Background" Value="#E1E1E1"/>
         <Setter Property="BorderBrush" Value="#7289da"/>
     </Style>
     
@@ -178,7 +178,7 @@
         <Setter Property="BorderThickness" Value="3"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="CornerRadius" Value="20"/>
-        <Setter Property="Background" Value="#36393e"/>
+        <Setter Property="Background" Value="#C4C4C4"/>
         <Setter Property="BorderBrush" Value="#7289da"/>
     </Style>
     
@@ -186,7 +186,7 @@
         <Setter Property="BorderThickness" Value="3"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="CornerRadius" Value="20"/>
-        <Setter Property="Background" Value="#282b30"/>
+        <Setter Property="Background" Value="#A7A7A7"/>
         <Setter Property="BorderBrush" Value="#7289da"/>
     </Style>
     
@@ -213,7 +213,7 @@
         <Setter Property="CornerRadius" Value="15"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Background" Value="#1e2124"/>
+        <Setter Property="Background" Value="#B4B4B4"/>
         <Setter Property="BorderBrush" Value="#7289da"/>
     </Style>
 
@@ -231,17 +231,17 @@
                                             <ColumnDefinition Width="5*" />
                                             <ColumnDefinition Width="*" />
                                         </Grid.ColumnDefinitions>
-                                        <Border x:Name="Border"  Grid.ColumnSpan="2" CornerRadius="5 5 0 0" Background="#282b30" BorderBrush="#7289da" BorderThickness="3" />
+                                        <Border x:Name="Border"  Grid.ColumnSpan="2" CornerRadius="5 5 0 0" Background="#E1E1E1" BorderBrush="#7289da" BorderThickness="3" />
                                         <Border Grid.Column="0" CornerRadius="5,0,0,5"  Margin="1"  Background="Transparent"  BorderBrush="Transparent" BorderThickness="0,0,1,0" />
                                         <Path x:Name="Arrow" Grid.Column="1"  Fill="#7289da" HorizontalAlignment="Center" VerticalAlignment="Center" Data="M 0 0 L 4 4 L 8 0 Z"/>
                                     </Grid>
                                     <ControlTemplate.Triggers>
                                         <Trigger Property="ToggleButton.IsMouseOver" Value="true">
-                                            <Setter TargetName="Border" Property="Background" Value="#36393e" />
+                                            <Setter TargetName="Border" Property="Background" Value="#B4B4B4" />
                                         </Trigger>
                                        
                                         <Trigger Property="ToggleButton.IsChecked" Value="true">
-                                            <Setter TargetName="Border" Property="Background" Value="#424549" />
+                                            <Setter TargetName="Border" Property="Background" Value="#CBCBCB" />
                                         </Trigger>
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
@@ -251,7 +251,7 @@
                         <TextBox x:Name="PART_EditableTextBox" Visibility="Hidden" IsReadOnly="{TemplateBinding IsReadOnly}"/>
                         <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" AllowsTransparency="True"  Focusable="False" PopupAnimation="Slide">
                             <Grid Background="Transparent"  Name="DropDown" SnapsToDevicePixels="True" MinWidth="{TemplateBinding ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}">
-                                <Border Padding="5" x:Name="DropDownBorder" Background="#36393e"  BorderThickness="3 0 3 3" BorderBrush="#7289da" CornerRadius="0 0 10 10"/>
+                                <Border Padding="5" x:Name="DropDownBorder" Background="#B4B4B4"  BorderThickness="3 0 3 3" BorderBrush="#7289da" CornerRadius="0 0 10 10"/>
                                 <ScrollViewer SnapsToDevicePixels="True">
                                     <StackPanel IsItemsHost="True" />
                                 </ScrollViewer>
@@ -264,6 +264,33 @@
         <Style.Triggers>
         </Style.Triggers>
     </Style>
+
+    <Style TargetType="RadioButton" >
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="RadioButton">
+                    <BulletDecorator Background="Transparent" Cursor="Hand">
+                        <BulletDecorator.Bullet>
+                            <Grid Height="16" Width="16" Background="Transparent">
+                                <Border Name="RadioOuter" Background="Transparent" BorderBrush="#7289da" BorderThickness="2" CornerRadius="50" />
+                                <Border CornerRadius="50" Margin="4" Name="RadioMark" Background="Black" Visibility="Hidden" />
+                            </Grid>
+                        </BulletDecorator.Bullet>
+                        <TextBlock Margin="3,1,0,0" Foreground="#FF3E3E3E" FontFamily="Calibri" FontSize="12">
+                     <ContentPresenter />
+                        </TextBlock>
+                    </BulletDecorator>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="true">
+                            <Setter TargetName="RadioMark" Property="Visibility" Value="Visible"/>
+                            <Setter TargetName="RadioOuter" Property="BorderBrush" Value="#7289da" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 
 
 </ResourceDictionary>
